# python-multi-step-agent.archetype

./: .gitinore  README.md  archetype.rhai  archetype.yaml
contents/base/{{ project-identifier }}/: .gitignore  Dockerfile  README.md  pyproject.toml
contents/base/{{ project-identifier }}/.github/workflows/: build-dev.yml
contents/base/{{ project-identifier }}/.platform/kubernetes/base/: application.yaml
contents/base/{{ project-identifier }}/.platform/kubernetes/dev/: application_patch.yaml
contents/base/{{ project-identifier }}/.platform/kubernetes/stg/: application_patch.yaml
contents/base/{{ project-identifier }}/manage/: docker.py
contents/base/{{ project-identifier }}/tests/: evaluation_questions.jsonl  test_core.py
contents/base/{{ project-identifier }}/{{ project_identifier }}/: chainlit.md  chainlit_en-US.md  main.py  run.sh
contents/base/{{ project-identifier }}/{{ project_identifier }}/.chainlit/: config.toml
contents/base/{{ project-identifier }}/{{ project_identifier }}/.chainlit/translations/: bn.json  en-US.json  gu.json  he-IL.json  hi.json  kn.json  ml.json  mr.json  ta.json  te.json  zh-CN.json
contents/base/{{ project-identifier }}/{{ project_identifier }}/core/: __init__.py  core.py  settings.py
contents/base/{{ project-identifier }}/{{ project_identifier }}/public/: copilot.html  custom.css
contents/base/{{ project-identifier }}/{{ project_identifier }}/scripts/: generate_token.py  index_data.py
contents/base/{{ project-identifier }}/{{ project_identifier }}/utils/: chat_profiles.py  common.py  configuration.py
(+2 files in other folders)
